[package]
name = "samogon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-compression = { version = "0.4.0", features = ["all", "tokio", "gzip"] }
bincode = "1.3.3"
camino = "1.1.4"
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.10.4"
hex = "0.4.3"
indicatif = { version = "0.17.5", features = ["improved_unicode", "rayon", "tokio"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
os_info = "3.7.0"
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
sha2 = { version = "0.10.7", features = ["asm", "asm-aarch64"] }
sha256 = "1.1.4"
term_size = "0.3.2"
textwrap = { version = "0.16.0", features = ["smawk"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tar = { git = "https://github.com/vorot93/tokio-tar.git", branch = "master" }
